PARTICIPANTS: use this file for creating the class diagram in mastery task 01
@startuml
title Music Playlist Service - Class Diagram

' Activity Classes
class AddSongToPlaylistActivity {
    - Logger log
    - PlaylistDao playlistDao
    - AlbumTrackDao albumTrackDao
    + AddSongToPlaylistActivity(PlaylistDao, AlbumTrackDao)
    + handleRequest(AddSongToPlaylistRequest, Context): AddSongToPlaylistResult
}

class CreatePlaylistActivity {
    - Logger log
    - PlaylistDao playlistDao
    + CreatePlaylistActivity(PlaylistDao)
    + handleRequest(CreatePlaylistRequest, Context): CreatePlaylistResult
}

class GetPlaylistActivity {
    - Logger log
    - PlaylistDao playlistDao
    + GetPlaylistActivity(PlaylistDao)
    + handleRequest(GetPlaylistRequest, Context): GetPlaylistResult
}

class GetPlaylistSongsActivity {
    - Logger log
    - PlaylistDao playlistDao
    + GetPlaylistSongsActivity(PlaylistDao)
    + handleRequest(GetPlaylistSongsRequest, Context): GetPlaylistSongsResult
}

class UpdatePlaylistActivity {
    - Logger log
    - PlaylistDao playlistDao
    + UpdatePlaylistActivity(PlaylistDao)
    + handleRequest(UpdatePlaylistRequest, Context): UpdatePlaylistResult
}

' DAO Classes
class AlbumTrackDao {
    - dynamoDbMapper: DynamoDBMapper
}

class PlaylistDao {
    - dynamoDbMapper: DynamoDBMapper
    + PlaylistDao(DynamoDBMapper)
    + getPlaylist(String): Playlist
    + savePlaylist(Playlist): void
}
' Exception Classes
class AttributeException extends RuntimeException {
    + AttributeException()
    + AttributeException(String)
    + AttributeException(Throwable)
    + AttributeException(String, Throwable)
}

class InvalidAttributeValueException extends AttributeException {
    + InvalidAttributeValueException()
    + InvalidAttributeValueException(String)
    + InvalidAttributeValueException(Throwable)
    + InvalidAttributeValueException(String, Throwable)
}

class InvalidAttributeChangeException extends AttributeException {
    + InvalidAttributeChangeException()
    + InvalidAttributeChangeException(String)
    + InvalidAttributeChangeException(Throwable)
    + InvalidAttributeChangeException(String, Throwable)
}

class AlbumTrackNotFoundException extends RuntimeException {
    + AlbumTrackNotFoundException()
    + AlbumTrackNotFoundException(String)
    + AlbumTrackNotFoundException(Throwable)
    + AlbumTrackNotFoundException(String, Throwable)
}

class PlaylistNotFoundException extends RuntimeException {
    + PlaylistNotFoundException()
    + PlaylistNotFoundException(String)
    + PlaylistNotFoundException(Throwable)
    + PlaylistNotFoundException(String, Throwable)
}

' DynamoDB Model Classes
class AlbumTrack {
    + @DynamoDBHashKey asin : String
    + @DynamoDBRangeKey trackNumber : Integer
    + albumName : String
    + songTitle : String
}

class Playlist {
    + @DynamoDBHashKey id : String
    + name : String
    + customerId : String
    + songCount : Integer
    + tags : Set<String>
    + songList : List<AlbumTrack>
}

' Relationships
AddSongToPlaylistActivity --> PlaylistDao
AddSongToPlaylistActivity --> AlbumTrackDao

CreatePlaylistActivity --> PlaylistDao

GetPlaylistActivity --> PlaylistDao

GetPlaylistSongsActivity --> PlaylistDao

UpdatePlaylistActivity --> PlaylistDao

Playlist --> AlbumTrack : contains

ModelConverter --> Playlist
ModelConverter --> PlaylistModel

CreatePlaylistActivity --> MusicPlaylistServiceUtils

AddSongToPlaylistActivity --> InvalidAttributeValueException : throws
UpdatePlaylistActivity --> InvalidAttributeChangeException : throws
AttributeException <|-- InvalidAttributeValueException
AttributeException <|-- InvalidAttributeChangeException

@enduml



